infra/k8s/apps/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core
  labels:
    project: core
