infra/k8s/apps/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  namespace: core
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - i14c206.p.ssafy.io
  rules:
    - host: i14c206.p.ssafy.io
      http:
        paths:
          - backend:
              service:
                name: api-server
                port:
                  number: 8080
            path: /test-api
            pathType: Prefix
